einstellung_derive/src/trybuild_tests/test_invalid_merge2.stderr
error: Unknown value: `subconfig`. Available values: `append`, `function`, `replace`
 --> src/trybuild_tests/test_invalid_merge2.rs
  |
  |     #[config(merge = "subconfig")]
  |                      ^^^^^^^^^^^
